Replace websocket URL with localhost

--- a/examples/websocket_barchart.html
+++ b/examples/websocket_barchart.html
@@ -31,7 +31,7 @@
         <script src="../src/charts/classes.js" type="text/javascript"></script>
         <script>
           var data = {
-            endpoint: 'ws://192.168.4.58:3000/socket.io/?EIO=3&transport=websocket',
+            endpoint: 'ws://localhost:3000/socket.io/?EIO=3&transport=websocket',
           };
           //No draw() call, since it is connected to a endpoint and data is automaticaly drawn.
           //Chart uses #chart selector by default
