--- a/examples/simple_barchart.html
+++ b/examples/simple_barchart.html
@@ -47,8 +47,13 @@
             {x:"12",y:"2"}
         ];
         //Default config uses #chart selector
-        barchart = new Barchart(data);
+        
+        barchart = new Barchart(data, config);
         barchart.draw();
+
+        barchart.on('click' , function(){
+            
+        })
         </script>
     </body>
 </html>
