Fix barchart example not loading.

--- a/examples/simple_barchart.html
+++ b/examples/simple_barchart.html
@@ -47,13 +47,8 @@
             {x:"12",y:"2"}
         ];
         //Default config uses #chart selector
-        
-        barchart = new Barchart(data, config);
+        barchart = new Barchart(data);
         barchart.draw();
-
-        barchart.on('click' , function(){
-            
-        })
         </script>
     </body>
 </html>
