--- a/examples/websocket_barchart.html
+++ b/examples/websocket_barchart.html
@@ -26,6 +26,7 @@
         <div id="chart"></div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="../node_modules/d3/d3.min.js"></script>
+        <script src="../src/utils/functions.js"></script>
         <script src="../src/utils/globals.js"></script>
         <script src="../src/utils/svgBarchart.js"></script>
         <script src="../src/charts/classes.js" type="text/javascript"></script>
