--- a/examples/simple_barchart.html
+++ b/examples/simple_barchart.html
@@ -32,6 +32,8 @@
         <script src="../src/utils/globals.js"></script>
         <script src="../src/utils/svgBarchart.js"></script>
         <script src="../src/charts/classes.js" type="text/javascript"></script>
+        <script src="../src/charts/barchart.js" type="text/javascript"></script>
+
         <script>
        var data =[
             {x:"1", y:"3"},
