Add strategy pattern for svg drawing method

--- a/examples/simple_barchart.html
+++ b/examples/simple_barchart.html
@@ -30,7 +30,8 @@
         <script src="../node_modules/d3/d3.min.js"></script>
         <script src="../src/utils/functions.js"></script>
         <script src="../src/utils/globals.js"></script>
-        <script src="../src/utils/svgBarchart.js"></script>
+        <script src="../src/utils/SvgStrategy.js"></script>
+        <script src="../src/utils/strategy_barchart.js"></script>
         <script src="../src/charts/classes.js" type="text/javascript"></script>
         <script src="../src/charts/barchart.js" type="text/javascript"></script>
 
