--- a/examples/websocket_barchart.html
+++ b/examples/websocket_barchart.html
@@ -28,8 +28,11 @@
         <script src="../node_modules/d3/d3.min.js"></script>
         <script src="../src/utils/functions.js"></script>
         <script src="../src/utils/globals.js"></script>
-        <script src="../src/utils/svgBarchart.js"></script>
+        <script src="../src/utils/SvgStrategy.js"></script>
+        <script src="../src/utils/strategy_barchart.js"></script>
         <script src="../src/charts/classes.js" type="text/javascript"></script>
+        <script src="../src/charts/barchart.js" type="text/javascript"></script>
+
         <script>
           var data = {
             endpoint: 'ws://localhost:3000/socket.io/?EIO=3&transport=websocket',
