Update chroma dependency and fix on websocket_chart.html

--- a/examples/websocket_barchart.html
+++ b/examples/websocket_barchart.html
@@ -36,7 +36,7 @@
 
         <script>
           var data = {
-            endpoint: 'ws://localhost:3000/socket.io/?EIO=3&transport=websocket',
+            endpoint: 'ws://localhost:3000/socket.io/?EIO=3&transport=websocket'
           };
           //No draw() call, since it is connected to a endpoint and data is automaticaly drawn.
           //Chart uses #chart selector by default
