--- a/examples/websocket_streamgraph.html
+++ b/examples/websocket_streamgraph.html
@@ -43,7 +43,7 @@
        
         var data = [{"key":"AR","value":"0.1","date":"01/08/13"}];
         //Default config uses #chart selector
-        streamgraph = new Streamgraph(clone(finalData));
+        streamgraph = new Streamgraph(finalData);
         streamgraph.draw();
     </script>
 </body>
