--- a/examples/simple_linechart.html
+++ b/examples/simple_linechart.html
@@ -34,6 +34,7 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="../node_modules/d3/d3.min.js"></script>
         <script src="../src/utils/functions.js"></script>
+        <script src="../src/utils/image.js"></script>
         <script src="../src/utils/globals.js"></script>
         <script src="../src/utils/strategies.js"></script>
         <script src="../src/utils/SvgStrategy.js"></script>
