Add dynamic styles and fix tests

--- a/examples/simple_linechart.html
+++ b/examples/simple_linechart.html
@@ -6,27 +6,7 @@
 <!--[if gt IE 8]><!-->
  <html class="no-js" lang="">
 <!--<![endif]-->
-    <head>
-        <style>
-            path {
-                stroke: steelblue;
-                stroke-width: 2;
-                fill: none;
-            }
-            .axis {
-              font: 10px sans-serif;
-            }
-            .axis path,
-            .axis line {
-              fill: none;
-              stroke: #000;
-              shape-rendering: crispEdges;
-            }
-            .x.axis path {
-              display: none;
-            }
-        </style>
-      </head>
+    <head></head>
     <body>
 
         <div id="chart"></div>
