--- a/examples/simple_barchart.html
+++ b/examples/simple_barchart.html
@@ -19,8 +19,8 @@
   <script src="../src/utils/image.js"></script>
   <script src="../src/utils/globals.js"></script>
   <script src="../src/utils/strategies.js"></script>
-  <script src="../src/utils/SvgStrategy.js"></script>
-  <script src="../src/utils/strategy_barchart.js"></script>
+  <script src="../src/svg/SvgStrategy.js"></script>
+  <script src="../src/svg/strategy_barchart.js"></script>
   <script src="../src/charts/classes.js" type="text/javascript"></script>
   <script src="../src/charts/barchart.js" type="text/javascript"></script>
 
