--- a/examples/simple_linechart.html
+++ b/examples/simple_linechart.html
@@ -17,8 +17,8 @@
         <script src="../src/utils/image.js"></script>
         <script src="../src/utils/globals.js"></script>
         <script src="../src/utils/strategies.js"></script>
-        <script src="../src/utils/SvgStrategy.js"></script>
-        <script src="../src/utils/strategy_linechart.js"></script>
+        <script src="../src/svg/SvgStrategy.js"></script>
+        <script src="../src/svg/strategy_linechart.js"></script>
         <script src="../src/charts/classes.js" type="text/javascript"></script>
         <script src="../src/charts/linechart.js" type="text/javascript"></script>
 
