--- a/examples/simple_barchart.html
+++ b/examples/simple_barchart.html
@@ -20,24 +20,25 @@
   <script src="../src/utils/globals.js"></script>
   <script src="../src/utils/strategies.js"></script>
   <script src="../src/svg/SvgStrategy.js"></script>
+  <script src="../src/svg/svg.js"></script>
   <script src="../src/svg/strategy_barchart.js"></script>
   <script src="../src/charts/classes.js" type="text/javascript"></script>
   <script src="../src/charts/barchart.js" type="text/javascript"></script>
 
   <script>
     var data = [
-                {x:1, y:"3"},
-                {x:2, y:"12"},
-                {x:3, y:"21"},
-                {x:4,y:"5"},
-                {x:5,y:"5"},
-                {x:6,y:"34"},
-                {x:7,y:"4"},
-                {x:8,y:"12"},
-                {x:9,y:"32"},
-                {x:10,y:"15"},
-                {x:13,y:"5"},
-                {x:12,y:"2"}
+                {x:1, y:3},
+                {x:2, y:12},
+                {x:3, y:21},
+                {x:4,y:5},
+                {x:5,y:5},
+                {x:6,y:34},
+                {x:7,y:4},
+                {x:8,y:12},
+                {x:9,y:32},
+                {x:10,y:15},
+                {x:13,y:5},
+                {x:12,y:2}
             ];
             //Default config uses #chart selector
             barchart = new Barchart(data);
