Add start() method in streaming examples

--- a/examples/websocket_barchart.html
+++ b/examples/websocket_barchart.html
@@ -46,6 +46,8 @@
           //No draw() call, since it is connected to a endpoint and data is automaticaly drawn.
           //Chart uses #chart selector by default
           barchart = new Barchart(data);
+          //Start streaming
+          barchart.start()
   </script>
 </body>
 
