--- a/examples/websocket_linechart.html
+++ b/examples/websocket_linechart.html
@@ -54,6 +54,8 @@
           //No draw() call, since it is connected to a endpoint and data is automaticaly drawn.
           //Chart uses #chart selector by default
           linechart = new Linechart(data);
+          //Start streaming
+          linechart.start()
     </script>
 </body>
 
